force-app/main/default/objects/Garment_Compensation__c/Garment_Compensation__c.object-meta.xml
<CustomObject>
    <label>Garment Compensation</label>
    <nameField>
        <displayFormat>GC-{0}</displayFormat>
        <label>Garment Compensation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garment Compensation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>