force-app/main/default/objects/Garment_Compensation__c/fields/Amount_Paid_Schedule_Other__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Schedule_Other__c</fullName>
    <label>Amount Paid Schedule - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>