force-app/main/default/objects/Garment_Compensation__c/fields/Bounced_Checks__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Checks__c</fullName>
    <label>Bounced Check(s)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>