force-app/main/default/objects/Garment_Compensation__c/fields/Hourly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Amount__c</fullName>
    <label>Hourly Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>