force-app/main/default/objects/Garment_Compensation__c/fields/Hourly_Employee__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Employee__c</fullName>
    <label>Hourly Employee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>