force-app/main/default/objects/Garment_Compensation__c/fields/Paid_by_Commission__c.field-meta.xml
<CustomField>
    <fullName>Paid_by_Commission__c</fullName>
    <label>Paid by Commission</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>